Fix Spectrum being hidden underneath sidebar

--- a/css/themizer.css
+++ b/css/themizer.css
@@ -15,7 +15,7 @@
   text-align: left;
   text-rendering: optimizeLegibility;
   overflow-x: visible;
-  z-index: 2147483647;
+  z-index: 2147483646;
   /* Prevent accidental selection of content in sidebar when resizing */
   cursor: auto;
   -webkit-user-select: none;
@@ -389,6 +389,7 @@
   position: fixed !important;
   background: #222 !important;
   box-shadow: 0 0 3px 2px #222;
+  z-index: 2147483647 !important;
 }
 
 .sp-picker-container {
